# mowotion

./: .env  Cargo.toml
migration/src/: create_user.rs  lib.rs
sql/: schema.sql
src/: auth.rs  config.rs  main.rs
src/models/: crud.rs  mod.rs  session.rs  user.rs  utils.rs
static/: home.css  login.css  style.css
templates/: index.html.j2  login.html.j2  register.html.j2
